--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/claseVideoAlmacenada/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/claseVideoAlmacenada/editar.xhtml
@@ -58,7 +58,7 @@
                         </p:menuitem>
                         <p:menuitem value="Clase interactiva" url="#{siteUrls.claseInteractiva}">
                         </p:menuitem>
-                        <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}">
+                        <p:menuitem value="Clase en vivo" url="#{siteUrls.claseVideoAlmacenada}">
                         </p:menuitem>
                     </p:tieredMenu> 
                 </div>
