--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/programacionClase/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/programacionClase/index.xhtml
@@ -66,6 +66,8 @@
             </p:dataTable>
             <p:commandButton value="Adicionar Programación" action="#{programacionClasesController.nuevoD()}"  rendered="#{loginController.mostrarA('1,2')}"></p:commandButton>
             <p:commandButton value="Refrescar" action="#{programacionClasesController.refresh()}" update="consulta"></p:commandButton>
+            <div class="EmptyBox20"></div>
         </h:form>
+        <div class="EmptyBox20"></div>
     </ui:define>
 </ui:composition>
