--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/cursoAlumno.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/cursoAlumno.xhtml
@@ -45,13 +45,13 @@
                     </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
-                        <p:menuitem value="Programacion de clases" url="#{siteUrls.programacionClases}" >    
+                        <p:menuitem value="Gestionar Evaluaciones" url="#{siteUrls.gestionEvaluacion}" >    
                         </p:menuitem>
-                        <p:menuitem value="Matricula de Alumnos" url="#{siteUrls.gestionAlumnos}">    
+                        <p:menuitem value="Gestionar Componentes interactivos" url="#{siteUrls.componenteInteractiva}" >
                         </p:menuitem>
-                        <p:menuitem value="Gestionar Notas" url="#{siteUrls.gestionNota}">
+                        <p:menuitem value="Gestionar Archivos Multimedia" url="#{siteUrls.gestionArchivosMultimedia}" >
                         </p:menuitem>
-                        <p:menuitem value="Gestionar Usuarios" url="#{siteUrls.gestionUsuarios}">
+                        <p:menuitem value="Programación de clases" url="#{siteUrls.programacionClases}">
                         </p:menuitem>
                     </p:tieredMenu> 
                 </div>
