--- a/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/editar.xhtml
@@ -10,7 +10,7 @@
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Portal Consultas" url="#"/>
-            <p:menuitem value="Busqueda de Consulta"></p:menuitem>
+            <p:menuitem value="Editar Consulta"></p:menuitem>
             <p:separator />
         </p:breadCrumb>
         
@@ -49,8 +49,6 @@
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
                         <p:menuitem value="Portal Noticia" >    
-                        </p:menuitem>
-                        <p:menuitem value="Portal Consulta">    
                         </p:menuitem>
                         <p:menuitem value="Buzon Notificaciones">    
                         </p:menuitem>
