--- a/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/crear.xhtml
@@ -9,7 +9,7 @@
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Portal Consultas" url="#"/>
-            <p:menuitem value="Busqueda de Consulta"></p:menuitem>
+            <p:menuitem value="Adicionar de Consulta"></p:menuitem>
             <p:separator />
         </p:breadCrumb>
         
@@ -51,9 +51,7 @@
                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
                         <p:menuitem value="Portal Noticia" >    
-                        </p:menuitem>
-                        <p:menuitem value="Portal Consulta">    
-                        </p:menuitem>
+                        </p:menuitem>                        
                         <p:menuitem value="Buzon Notificaciones">    
                         </p:menuitem>
                     </p:tieredMenu> 
