--- a/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/ver.xhtml
@@ -9,7 +9,7 @@
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Gestionar Noticias" url="#"/>
-            <p:menuitem value="Busqueda de Noticias"></p:menuitem>
+            <p:menuitem value="Ver Consulta"></p:menuitem>
             <p:separator />
         </p:breadCrumb>
         
