--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpUsuarios.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpUsuarios.jrxml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
+<!-- 2016-03-31T22:47:56 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptUsuarios" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="bd_sieni"/>
 	<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
@@ -21,14 +23,14 @@
 		<groupHeader>
 			<band height="37">
 				<textField>
-					<reportElement uuid="b2bae450-05fa-4226-81e9-dba5d30eabb0" x="0" y="0" width="185" height="20"/>
+					<reportElement x="0" y="0" width="185" height="20" uuid="b2bae450-05fa-4226-81e9-dba5d30eabb0"/>
 					<textElement>
 						<font size="14" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{tipo}]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement uuid="530bda54-0aca-4464-a702-6f7435a107c2" x="0" y="19" width="144" height="16"/>
+					<reportElement x="0" y="19" width="144" height="16" uuid="530bda54-0aca-4464-a702-6f7435a107c2"/>
 					<box padding="1">
 						<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -41,7 +43,7 @@
 					<text><![CDATA[Usuario]]></text>
 				</staticText>
 				<staticText>
-					<reportElement uuid="2d5f1b4b-bf3a-40e6-8413-63426e21580b" x="144" y="19" width="270" height="16"/>
+					<reportElement x="144" y="19" width="270" height="16" uuid="2d5f1b4b-bf3a-40e6-8413-63426e21580b"/>
 					<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 						<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -54,7 +56,7 @@
 					<text><![CDATA[Nombre]]></text>
 				</staticText>
 				<staticText>
-					<reportElement uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623" x="414" y="19" width="92" height="16"/>
+					<reportElement x="414" y="19" width="92" height="16" uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623"/>
 					<box padding="1">
 						<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -67,7 +69,7 @@
 					<text><![CDATA[Fecha Ingreso]]></text>
 				</staticText>
 				<staticText>
-					<reportElement uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939" x="506" y="19" width="55" height="16"/>
+					<reportElement x="506" y="19" width="55" height="16" uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939"/>
 					<box padding="1">
 						<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -84,10 +86,10 @@
 		<groupFooter>
 			<band height="23">
 				<line>
-					<reportElement uuid="606b56db-e243-4bf6-bd81-5bb84b16367c" x="0" y="0" width="561" height="1"/>
+					<reportElement x="0" y="2" width="561" height="1" uuid="606b56db-e243-4bf6-bd81-5bb84b16367c"/>
 				</line>
 				<textField>
-					<reportElement uuid="63b1ed33-34de-46b5-835b-fc754420d083" x="0" y="1" width="267" height="20"/>
+					<reportElement x="0" y="3" width="267" height="20" uuid="63b1ed33-34de-46b5-835b-fc754420d083"/>
 					<textElement>
 						<font isBold="true"/>
 					</textElement>
@@ -102,11 +104,11 @@
 	<title>
 		<band height="92" splitType="Stretch">
 			<image>
-				<reportElement uuid="efe7bbf6-afb3-4970-a868-fac4475e6689" x="22" y="-1" width="105" height="46"/>
+				<reportElement x="22" y="-1" width="105" height="46" uuid="efe7bbf6-afb3-4970-a868-fac4475e6689"/>
 				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement uuid="cb2d6042-f989-42c2-ab39-7e624bbe6c10" x="185" y="0" width="205" height="29"/>
+				<reportElement x="185" y="0" width="205" height="29" uuid="cb2d6042-f989-42c2-ab39-7e624bbe6c10"/>
 				<textElement textAlignment="Center">
 					<font size="11" isBold="true"/>
 				</textElement>
@@ -114,37 +116,35 @@
 Reporte de Usuario]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="4267cde1-db7d-4399-8a03-21a638f6a319" x="397" y="0" width="164" height="30"/>
+				<reportElement x="397" y="0" width="164" height="30" uuid="4267cde1-db7d-4399-8a03-21a638f6a319"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Pág "+$V{PAGE_NUMBER}+" de " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="477d492a-c50c-4770-9204-5267f911be67" x="397" y="50" width="164" height="20"/>
+				<reportElement x="397" y="50" width="164" height="20" uuid="477d492a-c50c-4770-9204-5267f911be67"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["F. Generación:   "+ $P{fechaGeneracion}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="cab49e17-ced0-414e-8838-1a2960a8f8fc" x="25" y="50" width="100" height="20"/>
+				<reportElement x="25" y="50" width="100" height="20" uuid="cab49e17-ced0-414e-8838-1a2960a8f8fc"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tipo de Usuario:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="c8ab534b-b5ba-4731-b2dc-73881b65d8b8" x="127" y="50" width="129" height="20"/>
-				<textElement/>
+				<reportElement x="127" y="50" width="129" height="20" uuid="c8ab534b-b5ba-4731-b2dc-73881b65d8b8"/>
 				<textFieldExpression><![CDATA[$P{tipoUsuario}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="a71b1ec7-6e6f-49d3-a05e-0577a97a637a" x="25" y="70" width="100" height="20"/>
+				<reportElement x="25" y="70" width="100" height="20" uuid="a71b1ec7-6e6f-49d3-a05e-0577a97a637a"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Estado:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="47a0bcc4-d53f-4541-9369-7e28981c7b26" x="127" y="70" width="129" height="20"/>
-				<textElement/>
+				<reportElement x="127" y="70" width="129" height="20" uuid="47a0bcc4-d53f-4541-9369-7e28981c7b26"/>
 				<textFieldExpression><![CDATA[$P{estadoUsuario}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -155,7 +155,7 @@ Reporte de Usuario]]></text>
 	<detail>
 		<band height="18" splitType="Stretch">
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
-				<reportElement uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42" x="414" y="-1" width="92" height="19"/>
+				<reportElement x="414" y="-1" width="92" height="19" uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -166,29 +166,28 @@ Reporte de Usuario]]></text>
 				<textFieldExpression><![CDATA[$F{fechaIngreso}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="2005aca6-dfaa-44ca-bb41-e909c8b78818" x="506" y="-1" width="55" height="19"/>
+				<reportElement x="506" y="-1" width="55" height="19" uuid="2005aca6-dfaa-44ca-bb41-e909c8b78818"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{activo}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="86df671e-2b3c-481f-81a3-19cc7bdae722" x="0" y="-1" width="144" height="19"/>
+				<reportElement x="0" y="-1" width="144" height="19" uuid="86df671e-2b3c-481f-81a3-19cc7bdae722"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement/>
 				<textFieldExpression><![CDATA[$F{usuario}]]></textFieldExpression>
 			</textField>
 			<textField pattern="" isBlankWhenNull="true">
-				<reportElement uuid="41ec8b5b-0a04-4bc0-8357-049423460f7d" mode="Transparent" x="144" y="-1" width="270" height="19" forecolor="#000000" backcolor="#FFFFFF"/>
+				<reportElement mode="Transparent" x="144" y="-1" width="270" height="19" forecolor="#000000" backcolor="#FFFFFF" uuid="41ec8b5b-0a04-4bc0-8357-049423460f7d"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -206,7 +205,7 @@ Reporte de Usuario]]></text>
 	<summary>
 		<band height="34">
 			<textField>
-				<reportElement uuid="acdcfa32-9f0e-49ab-9f21-4cb802c38097" x="0" y="14" width="234" height="20"/>
+				<reportElement x="0" y="14" width="234" height="20" uuid="acdcfa32-9f0e-49ab-9f21-4cb802c38097"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
