--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEvaluaciones/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEvaluaciones/index.xhtml
@@ -21,7 +21,7 @@
                     <p:outputLabel for="desde" value="Fecha desde " class=" Responsive"></p:outputLabel>
                     <p:calendar class="Container100" id="desde" value="#{rptEvaluacioenesController.desde}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de inicio" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                     <p:outputLabel for="hasta" value="hasta: " class=" Responsive"></p:outputLabel>
-                    <p:calendar class="Container100" id="hasta" value="#{rptEvaluacioenesController.hasta}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de fin" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
+                    <p:calendar class="Container100" id="hasta" value="#{rptEvaluacioenesController.hasta}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaFinAnioActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de fin" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                     <p:commandButton value="Generar" actionListener="#{rptEvaluacioenesController.fill()}" update="consulta" ajax="true"></p:commandButton>
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
