--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/materias/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/materias/editar.xhtml
@@ -26,8 +26,8 @@
                     <p:inputText tabindex="1" id="nombre" value="#{catMateriaController.modifica.catNombre}" required="true" requiredMessage="Debe ingresar un nombre a la materia" maxlength="#{tamanioUtils.nombreArchivoMax}"></p:inputText>
                     <p:outputLabel for="estado" value="Estado: " class=" Responsive"></p:outputLabel>
                     <p:selectOneMenu tabindex="2" id="estado" class=" Responsive" value="#{catMateriaController.modifica.catEstado}">
-                        <f:selectItem itemValue ="A" itemLabel="Activo"/>
-                        <f:selectItem itemValue="P" itemLabel="Trabajando"/>
+                        <f:selectItem itemValue ="A" itemLabel="Disponible"/>
+                        <f:selectItem itemValue="T" itemLabel="No Disponible"/>
                     </p:selectOneMenu>
                 </p:panelGrid>
                 <p:tooltip for="nombre">
