--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/index.xhtml
@@ -66,7 +66,7 @@
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
 
-                <p:commandButton value="Adicionar Curso" action="#{gestionCursoController.nuevo()}" ></p:commandButton>
+                <p:commandButton value="Adicionar Curso" action="#{gestionCursoController.initNuevo()}" ></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{gestionCursoController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
             <div class="EmptyBox5"></div>
