--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
@@ -62,7 +62,7 @@
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
 
-                <p:commandButton value="Adicionar Docente" action="#{gestionarDocentesController.nuevo()}" ></p:commandButton>
+                <p:commandButton value="Adicionar Docente" action="#{gestionarDocentesController.initNuevo()}" ></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{gestionarDocentesController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
             <div class="EmptyBox5"></div>
