--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/grados/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/grados/index.xhtml
@@ -20,10 +20,13 @@
         <div class="EmptyBox5"></div>
         <p:panel>
             <h:form id="consultaForm">
+                
+                <p:remoteCommand name="rcReload" autoRun="true" update="consulta"  />
+                
                 <p:dialog widgetVar="dlgEliminar" header="Eliminar" modal="true">
                     <p:outputLabel value="¿Está seguro de eliminar el registro?" class="TexAlCenter" ></p:outputLabel>
                     <div class="EmptyBox20"></div>
-                    <p:commandButton value="Si" action="#{catGradoController.eliminarGrado()}" update="consultaForm" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
+                    <p:commandButton value="Si" action="#{catGradoController.eliminarGrado()}" onsuccess="rcReload()" update="consulta:columnNombre,consulta:columnNumero,consulta:columnEstado" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
                     <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
                 </p:dialog>
                 <p:dataTable id="consulta" paginatorPosition="bottom" rows="10" var="car" value="#{catGradoController.list}" 
@@ -33,13 +36,13 @@
                              emptyMessage="No se encontraron datos"
                              filteredValue="#{catGradoController.listDatosFiltered}"
                              reflow="true">
-                    <p:column headerText="Nombre" filterBy="#{car.grNombre}" filterable="true" filterMatchMode="contains">
+                    <p:column id="columnNombre" headerText="Nombre" filterBy="#{car.grNombre}" filterable="true" filterMatchMode="contains" filterValue="#{catGradoController.filtroNombre}">
                         #{car.grNombre}
                     </p:column>
-                    <p:column headerText="Numero" filterBy="#{car.grNumero}" filterable="true" filterMatchMode="contains">
+                    <p:column id="columnNumero" headerText="Numero" filterBy="#{car.grNumero}" filterable="true" filterMatchMode="contains" filterValue="#{catGradoController.filtroNumero}">
                         #{car.grNumero}
                     </p:column>
-                    <p:column headerText="Estado" filterBy="#{car.estado}" filterable="true" filterMatchMode="contains">
+                    <p:column id="columnEstado" headerText="Estado" filterBy="#{car.estado}" filterable="true" filterMatchMode="contains" filterValue="#{catGradoController.filtroEstado}">
                         #{car.estado}
                     </p:column>
                     <p:column headerText="Acciones">
