--- a/SIENI/SIENI-web/src/main/webapp/resources/css/style.css
+++ b/SIENI/SIENI-web/src/main/webapp/resources/css/style.css
@@ -90,40 +90,41 @@
 
 
 
-.menu-burbuja {
-    float: left;
-    position: relative;
-}
+
+                .menu-burbuja {
+                    float: left;
+                    position: relative;
+                }
 
 
-.burbuja {
-    float: left;
-    position: relative;
-    width: 5px;
-    height: 5px;
-    border-radius: 10px;
-    background: none repeat scroll 0 0 red;
-    text-align: left;
-    color: #ffffff;
-    font: bold 0.3em Tahoma,Arial,Helvetica;
-    padding: 5px 5px;
-    position: absolute;
-    right: 5px;
-    top: 5px;
-    -webkit-transition: all 0.5s ease-out;
-       -moz-transition: all 0.5s ease-out;
-        -ms-transition: all 0.5s ease-out;
-         -o-transition: all 0.5s ease-out;
-            transition: all 0.5s ease-out;
-}
+                .burbuja-notify {
+                    float: left;
+                    position: relative;
+                    width: 5px;
+                    height: 5px;
+                    border-radius: 10px;
+                    background: none repeat scroll 0 0 red;
+                    text-align: left;
+                    color: #ffffff;
+                    font: bold 0.3em Tahoma,Arial,Helvetica;
+                    padding: 5px 5px;
+                    position: absolute;
+                    right: 5px;
+                    top: 5px;
+                    -webkit-transition: all 0.5s ease-out;
+                       -moz-transition: all 0.5s ease-out;
+                        -ms-transition: all 0.5s ease-out;
+                         -o-transition: all 0.5s ease-out;
+                            transition: all 0.5s ease-out;
+                }
 
-.burbuja.agrandar {
-        width: 20px;
-        height: 20px;
-        padding-top: -5px;
-}
+                .burbuja-notify.agrandar {
+                        width: 20px;
+                        height: 20px;
+                        padding-top: -5px;
+                }
 
 
-.panel-notify.ui-panel .ui-panel-titlebar {
-    height: 30px;
-}
+                .panel-notify.ui-panel .ui-panel-titlebar {
+                    height: 30px;
+                }
