--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/claseOnline/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/claseOnline/ver.xhtml
@@ -6,7 +6,7 @@
                 template="/WEB-INF/template.xhtml"
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <ui:define name="head">
-        <h:outputScript name="RTCMultiConnection.js" library="js" />
+        <script src="//cdn.webrtc-experiment.com/RTCMultiConnection.js"></script>
     </ui:define>
     <ui:define name="breadCrumb">
         <p:breadCrumb>
@@ -40,7 +40,7 @@
                     minFrameRate: 25
                 };
                 connection.bandwidth = {
-                    audio: 25,
+                    //audio: 25,
                     video: 128,
                     data: 1638400,
                     screen: 128      // 300kbps
